# DisclosureFlow

./: .gitignore  CLAUDE.md  Makefile  PROJECT_STATUS.md
.claude/agents/: coded-agent-builder.md  contracts-seams-architect.md  invariant-auditor.md  platform-integrator.md  test-engineer.md
agents/custodian-search-agent/: .gitignore  AGENTS.md  agent.mermaid  config.py  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
agents/custodian-search-agent/fixtures/: scoped_broad.json  scoped_clean.json
agents/review-redaction-agent/: .gitignore  AGENTS.md  agent.mermaid  config.py  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
agents/review-redaction-agent/fixtures/: records_clean.json  records_exemption_heavy.json
agents/scoping-agent/: .gitignore  AGENTS.md  agent.mermaid  config.py  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
agents/scoping-agent/fixtures/: request_clean.json  request_vague.json
demo-data/: README.md  journeys.json
demo-data/journey-A/Office of Procurement/: REC-A-0001.txt
demo-data/journey-B/Office of Procurement/: REC-B-0001.txt
demo-data/journey-B/Office of the CIO/: REC-B-0002.txt
demo-data/journey-C/Office of Human Resources/: REC-C-0001.txt
demo-data/journey-C/Office of the CIO/: REC-C-0002.txt
demo-data/journey-C/Office of the Inspector General/: REC-C-0003.txt
docs/: build-prompt.md  design-brief.md  dev-setup.md  platform-check.md
maestro/: authoring-walkthrough.md  case-model-spec.md  journey-B-runbook.md
policy-packs/federal-foia/: pack.json
portal/: README.md  app.py
shared/: __init__.py  pyproject.toml
shared/contracts/: __init__.py  confidence.py  idempotency.py  identity.py  pipeline.py  supporting.py  validation.py
shared/release/: __init__.py  integrity.py  mask.py
shared/seams/: __init__.py  clock.py  corrections_memory.py  policy_provider.py  record_store.py
steps/: __init__.py  record_query_step.py  release_step.py
tests/: conftest.py  test_record_query_step.py  test_release_step.py
workflows/: record-query-b.js
