[project]
name = "disclosureflow-review-redaction-agent"
version = "0.0.2"
description = "DisclosureFlow Review and Redaction LangGraph coded agent (brief §3, the hero): per-record responsiveness review, exemption classification (5/6/7(C)) grounded in the PolicyProvider, a source-grounded foreseeable-harm rationale per redaction, the data-driven exemption test, and a DERIVED confidence signal (§8.1). Returns RedactionProposal[] (wrapped in a thin ReviewResult envelope), §8.3-validated at the boundary."
authors = [{ name = "Vikram Iyer", email = "vikramiyer@berkeley.edu" }]
dependencies = [
    "uipath-langchain>=0.12.0, <0.13.0",
    "pydantic>=2,<3",
    "langchain-anthropic>=0.3, <0.4",
]
requires-python = ">=3.11"
